--- a/www/css/popup.css
+++ b/www/css/popup.css
@@ -1,5 +1,6 @@
-body { margin: 0; width: 180px; height: 60px; }
+body { margin: 0; width: 180px; min-height: 60px; }
 body .options { background-color: #fff; font-family: 'Roboto', Arial, Helvetica, sans-serif; font-size: 14px; color: #555; padding: 16px; }
+body .options a { color: inherit; text-align: center; display: block; text-decoration: none; }
 body .options .switch-input { display: none; }
 body .options .switch-label { box-sizing: border-box; position: relative; display: inline-block; cursor: pointer; font-weight: 500; text-align: left; padding: 6px 0 6px 44px; user-select: none; width: 100%; line-height: 16px; }
 body .options .switch-label:before, 
@@ -8,6 +9,10 @@ body .options .switch-label:before { left: 1px; width: 34px; height: 14px; backg
 body .options .switch-label:after { left: 0; width: 20px; height: 20px; background-color: #ededed; border-radius: 50%; box-shadow: 0 3px 1px -2px rgba(0, 0, 0, 0.14), 0 2px 2px 0 rgba(0, 0, 0, 0.098), 0 1px 5px 0 rgba(0, 0, 0, 0.084); }
 body .options .switch-input:checked + .switch-label:before { background-color: #995fb3; }
 body .options .switch-input:checked + .switch-label:after { background-color: #de5ced; transform: translate(80%, -50%); }
+body .options .material-icons { color: #dc265a; font-size: 16px; vertical-align: middle; animation: 0.5s ease-in-out throb infinite alternate; }
+body .options .md-btn { display: block; height: 36px; width: 100%; margin: 16px 0 12px 0; padding: 6px 16px; text-align: center; cursor: pointer; user-select: none; border: 0; background: #de5ced; color: #fff; outline: 0; }
+body .options .md-btn:hover { background-color: #802e8d; }
 
 @font-face { font-family: Roboto; src: url('../fonts/Roboto-Regular.woff2') format('woff2'), url('../fonts/Roboto-Regular.woff') format('woff'); }
 @font-face { font-family: RobotoBlack; src: url('../fonts/Roboto-Black.woff2') format('woff2'), url('../fonts/Roboto-Black.woff') format('woff'); }
+@keyframes throb { 0% { transform: scale(1); } 100% { transform: scale(1.25); } }
