--- a/www/css/popup.css
+++ b/www/css/popup.css
@@ -7,11 +7,11 @@ body .options .switch-label:before,
 body .options .switch-label:after { content: ""; position: absolute; margin: 0; outline: 0; top: 50%; transform: translate(0, -50%); transition: all 0.3s ease; }
 body .options .switch-label:before { left: 1px; width: 34px; height: 14px; background-color: #9E9E9E; border-radius: 8px; }
 body .options .switch-label:after { left: 0; width: 20px; height: 20px; background-color: #ededed; border-radius: 50%; box-shadow: 0 3px 1px -2px rgba(0, 0, 0, 0.14), 0 2px 2px 0 rgba(0, 0, 0, 0.098), 0 1px 5px 0 rgba(0, 0, 0, 0.084); }
-body .options .switch-input:checked + .switch-label:before { background-color: #995fb3; }
-body .options .switch-input:checked + .switch-label:after { background-color: #de5ced; transform: translate(80%, -50%); }
+body .options .switch-input:checked + .switch-label:before { background-color: #2662ca; }
+body .options .switch-input:checked + .switch-label:after { background-color: #4885ed; transform: translate(80%, -50%); }
 body .options .material-icons { color: #dc265a; font-size: 16px; vertical-align: middle; animation: 0.5s ease-in-out throb infinite alternate; }
-body .options .md-btn { display: block; height: 36px; width: 100%; margin: 16px 0 12px 0; padding: 6px 16px; text-align: center; cursor: pointer; user-select: none; border: 0; background: #de5ced; color: #fff; outline: 0; }
-body .options .md-btn:hover { background-color: #802e8d; }
+body .options .md-btn { background: #4885ed; display: block; height: 36px; width: 100%; margin: 16px 0 12px 0; padding: 6px 16px; text-align: center; cursor: pointer; user-select: none; border: 0; color: #fff; outline: 0; }
+body .options .md-btn:hover { background-color: #2662ca; }
 
 @font-face { font-family: Roboto; src: url('../fonts/Roboto-Regular.woff2') format('woff2'), url('../fonts/Roboto-Regular.woff') format('woff'); }
 @font-face { font-family: RobotoBlack; src: url('../fonts/Roboto-Black.woff2') format('woff2'), url('../fonts/Roboto-Black.woff') format('woff'); }
