--- a/www/css/popup.css
+++ b/www/css/popup.css
@@ -12,10 +12,10 @@ body .options .switch-label:after { left: 0; width: 20px; height: 20px; backgrou
 body .options .switch-input:checked + .switch-label:before { background-color: #2662ca; }
 body .options .switch-input:checked + .switch-label:after { background-color: #4885ed; transform: translate(80%, -50%); }
 body .options .material-icons { color: #dc265a; font-size: 16px; vertical-align: middle; animation: 0.5s ease-in-out throb infinite alternate; }
-body .options .md-btn { background-color: #4885ed; display: block; height: 36px; width: 100%; margin: 16px 0 12px 0; padding: 6px 16px; text-align: center; cursor: pointer; user-select: none; border: 0; color: #fff; outline: 0; }
-body .options .md-btn[data-state="disabled"] { background-color: #ddd; color: inherit; }
-body .options .md-btn[data-state="disabled"]:hover { background-color: #ccc; }
-body .options .md-btn:hover { background-color: #2662ca; }
+body .options .md-btn { background-color: #ddd; display: block; height: 36px; width: 100%; margin: 16px 0 12px 0; padding: 6px 16px; text-align: center; cursor: pointer; user-select: none; border: 0; color: inherit; outline: 0; }
+body .options .md-btn:hover { background-color: #ccc; }
+body .options .md-btn[data-state="disabled"] { background-color: #4885ed; color: #fff; }
+body .options .md-btn[data-state="disabled"]:hover { background-color: #2662ca; }
 
 @font-face { font-family: Roboto; src: url('../fonts/Roboto-Regular.woff2') format('woff2'), url('../fonts/Roboto-Regular.woff') format('woff'); }
 @font-face { font-family: RobotoBlack; src: url('../fonts/Roboto-Black.woff2') format('woff2'), url('../fonts/Roboto-Black.woff') format('woff'); }
