--- a/www/css/popup.css
+++ b/www/css/popup.css
@@ -1,22 +1,25 @@
 body { margin: 0; width: 180px; min-height: 60px; text-align: center; }
 body .options { background-color: #fff; font-family: 'Roboto', Arial, Helvetica, sans-serif; font-size: 14px; color: #555; padding: 16px; }
 body .options h1 { font-size: 16px; font-family: 'RobotoBlack'; margin: 0; }
-body .options p { margin: 0; }
+body .options p { margin: 0px 0px 12px; }
 body .options a { color: inherit; text-align: center; display: block; text-decoration: none; }
-body .options .switch-input { display: none; }
-body .options .switch-label { box-sizing: border-box; position: relative; display: inline-block; cursor: pointer; font-weight: 500; text-align: left; padding: 6px 0 6px 44px; user-select: none; width: 100%; line-height: 16px; }
-body .options .switch-label:before, 
-body .options .switch-label:after { content: ""; position: absolute; margin: 0; outline: 0; top: 50%; transform: translate(0, -50%); transition: all 0.3s ease; }
-body .options .switch-label:before { left: 1px; width: 34px; height: 14px; background-color: #9E9E9E; border-radius: 8px; }
-body .options .switch-label:after { left: 0; width: 20px; height: 20px; background-color: #ededed; border-radius: 50%; box-shadow: 0 3px 1px -2px rgba(0, 0, 0, 0.14), 0 2px 2px 0 rgba(0, 0, 0, 0.098), 0 1px 5px 0 rgba(0, 0, 0, 0.084); }
-body .options .switch-input:checked + .switch-label:before { background-color: #2662ca; }
-body .options .switch-input:checked + .switch-label:after { background-color: #4885ed; transform: translate(80%, -50%); }
-body .options .material-icons { color: #dc265a; font-size: 16px; vertical-align: middle; animation: 0.5s ease-in-out throb infinite alternate; }
-body .options .md-btn { background-color: #ddd; display: block; height: 36px; width: 100%; margin: 16px 0 12px 0; padding: 6px 16px; text-align: center; cursor: pointer; user-select: none; border: 0; color: inherit; outline: 0; }
-body .options .md-btn:hover { background-color: #ccc; }
-body .options .md-btn[data-state="inactive"] { background-color: #4885ed; color: #fff; }
-body .options .md-btn[data-state="inactive"]:hover { background-color: #2662ca; }
+body .options #review .material-icons { color: #dc265a; font-size: 16px; vertical-align: middle; animation: 0.5s ease-in-out throb infinite alternate; }
+body .options .toggle { background-color: #f1f1f1; border-radius: 8px; cursor: pointer; display: flex; justify-content: space-between; align-items: center; padding: 12px 6px; margin: 0px 0px 12px; user-select: none; }
+body .options .toggle span { vertical-align: middle; }
+body .options .toggle span .material-icons { padding-right: 8px; }
+body .options .toggle input { display: none; }
+body .options .toggle .switch { background-color: #dddddd; border-radius: 999px; width: 32px; height: 12px; transition: all 0.25s ease-in-out; }
+body .options .toggle .switch:before { background-color: #999; border-radius: 999px; content: ''; display: block; height: 16px; width: 16px; transform: translate(-2px, -2px); transition: all 0.25s ease-in-out; }
+body .options .toggle input:checked ~ .switch { background-color: rgb(72, 133, 237, 0.25); }
+body .options .toggle input:checked ~ .switch:before { background-color: #4885ed; transform: translate(18px, -2px); }
 
-@font-face { font-family: Roboto; src: url('../fonts/Roboto-Regular.woff2') format('woff2'), url('../fonts/Roboto-Regular.woff') format('woff'); }
-@font-face { font-family: RobotoBlack; src: url('../fonts/Roboto-Black.woff2') format('woff2'), url('../fonts/Roboto-Black.woff') format('woff'); }
+/* Google fonts */
+.material-icons { font-family: 'Material Icons'; font-weight: normal; font-style: normal; font-size: 24px; line-height: 1; letter-spacing: normal; text-transform: none; display: inline-block; white-space: nowrap; word-wrap: normal; direction: ltr; -webkit-font-feature-settings: 'liga'; -webkit-font-smoothing: antialiased; }
+
+/* Local fonts */
+@font-face { font-family: 'Roboto'; src: url('../fonts/Roboto-Regular.woff2') format('woff2'), url('../fonts/Roboto-Regular.woff') format('woff'); }
+@font-face { font-family: 'RobotoBlack'; src: url('../fonts/Roboto-Black.woff2') format('woff2'), url('../fonts/Roboto-Black.woff') format('woff'); }
+@font-face { font-family: 'Material Icons'; src: url('../fonts/material-icons.woff2') format('woff2'); }
+
+/* Animations */
 @keyframes throb { 0% { transform: scale(1); } 100% { transform: scale(1.25); } }
